fixed web alignment

--- a/frontend/src/app/component/index.css
+++ b/frontend/src/app/component/index.css
@@ -1,15 +1,15 @@
-.centralContainer {
+.formContainer {
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 20px;
     padding-bottom: 20px;
 }
 
-.formContainer {
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+.siteContentContainer {
+    margin-left: 15px;
+    margin-top: 15px;
+    margin-right: 15px;
+    margin-bottom: 15px;
 }
 
 .siteHeaderSegment {
